--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "github:react-native-async-storage/async-storage",
     "@react-native-community/datetimepicker": "^6.2.0",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/drawer": "5.12.9",
@@ -28,7 +29,8 @@
     "react-native-screens": "~3.15.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-redux": "^8.0.4",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
